# game-time-manager

installer/: build.nsi  config.toml
service/: Cargo.toml  WHY.md  build.rs  game-time-manager.exe.manifest
service/src/: config.rs  config.toml  install.ps1  main.rs  overlay.rs  system_provider.rs  system_provider_test.rs  uninstall.ps1  watcher.rs  watcher_test.rs
tray/: Cargo.toml  build.rs  game-time-manager-tray-manifest.rc  game-time-manager-tray.manifest
tray/src/: config.toml  main.rs
