[package]
name = "GameTimeManager-Tray"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-icon = "0.4.4"
tao = "0.18"
image = "0.24"
sysinfo = "0.27.2"

[build-dependencies]
embed-resource = "2.0"
embed-manifest = "1.3.1"
copy_to_output = { git = "https://github.com/prenwyn/copy_to_output", rev = "24c5b082" }

#[dev-dependencies]
# winit = "0.28"
# tao = { git = "https://github.com/tauri-apps/tao", branch = "muda" }
# image = "0.24"
# eframe = "0.21"